v0.9   Pending...

  New
  + Confirm clear option.
  + Parcellite menu hotkey.
  + Hungarian and turkish translation.
  + Support for managing x-selection (primary).
  + Prevent empty clipboard. Clipboard/Primary contents are backed up and recovered
    if they ever become NULL.
  
  Changes
  + Fixed daemon mode.
  + Changed preferences dialog.
  + Changed actions preferences to use GtkTreeView's built in editing mode.
  + Fixed bug with icon showing up in --no-icon mode when you execute an action.
  + Fixed parcellite-startup.desktop to include "Type=Application" to prevent
    desktop-file-validate from failing.

v0.8   Monday, August 11 2008

	New
	+ Daemon mode.
	+ Reverse history option.
	+ Internationalization support.
	+ German, Russian, Italian and Spanish translations.
	+ No-icon option (uses Ctrl-Alt-P for the menu).
	
	Changes
	+ Menu generation and display is quicker.
	+ Selected items also get copied to primary.
	+ History shows newest item first by default.
	+ Performance and overall improvement on action executions.

v0.7  Sunday, March 30 2008

	New
	+ Added man page.
	+ Option to disable/enable saving history.

	Changes
	+ Removed startup option.
	+ Performance improvements.
	+ Runs at startup by default in GNOME (remove via GNOME's Sessions application).
	+ Config now saves in ~/.config/parcellite following freedesktop.org specifications.
	+ Data now saves in ~/.local/share/parcellite following freedesktop.org specifications.
	+ Bugfix: Assertion error on first run.

v0.6.1  Sunday, February 24 2008

	Changes
	+ Renamed uninstall.py to uninstall-pre-0.5.py to clear up that it
	  only uninstalls pre-0.5 versions of parcellite.
	+ Bugfix: Edit clipboard window skipping taskbar prevented quitting
	  if it was open and the window manager minized all windows.

v0.6  Sunday, February 03 2008

	New
	+ Added global hotkeys for history and actions menu.
	  <Ctrl><Alt>C for clipboard and <Ctrl><Alt>A for actions by default.

	Changes