@@ -60,6 +60,7 @@ AC_TYPE_SIGNAL()
 
 AC_CONFIG_FILES([Makefile
                 doc/Makefile
-                src/Makefile])
+                src/Makefile
+                data/Makefile])
 
 AC_OUTPUT(po/Makefile.in)
