@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Parcellite
-Comment=Clipboard Manager
+_Name=Parcellite
+_Comment=Clipboard Manager
 Icon=gtk-paste
 Exec=parcellite
 Terminal=false
