@@ -1,3 +1,5 @@
 src/main.c
 src/utils.c
 src/preferences.c
+data/parcellite.desktop.in
+data/parcellite-startup.desktop.in
